--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "astro": "^5.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
